--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -68,7 +68,7 @@
                 </li>
             <% } %>
             <!-- 페이지 리스트 -->
-            <% let end_page = parseInt(data.count/10) %>
+            <% let end_page = parseInt((data.count-1)/10)+1; console.log("count : ",data.count,"end page:", end_page) %>
             <% if (page < 4) { 
                 for (let i = 1; i < 6; i++) {
                     if (page==i) { %>
