취소 버튼 추가

--- a/views/pages/update.ejs
+++ b/views/pages/update.ejs
@@ -22,6 +22,7 @@
                     <textarea class="form-control" name="content" id="content" rows="10"><%= content %></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">save</button>
+                <button type="button" onclick="cancel();" class="btn btn-primary">cancel</button>
             </form>
         </div>
 </body>
