--- a/views/pages/write.ejs
+++ b/views/pages/write.ejs
@@ -18,6 +18,7 @@
                     <textarea class="form-control" name="content" id="content" rows="10"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">save</button>
+                <button type="button" onclick="cancel();" class="btn btn-primary">cancel</button>
             </form>
         </div>
 </body>
