--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,4 +6,4 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, inital-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="id=edge"
+<meta http-equiv="X-UA-Compatible" content="id=edge">
