--- a/views/pages/detail.ejs
+++ b/views/pages/detail.ejs
@@ -26,6 +26,6 @@
             <textarea style="width: 90%; margin: 10px;"><%= data.content %></textarea>
             <div style="justify-content: space-between;"></div>
             <a class="btn btn-primary" href="/update/<%= data.bbs_id %>">수정</a>
-            <a class="btn btn-primary" href="/delete/<%= data.bbs_id %>">삭제</a>
+            <button class="btn btn-primary" onclick="del_bbs('<%= data.bbs_id %>');">삭제</button>
         </div>
 </body>
