--- a/views/pages/detail.ejs
+++ b/views/pages/detail.ejs
@@ -23,7 +23,7 @@
                 <p>수정시간 : <%= formatDate(data.u_date) %></p>
             <% } %>
             <!-- <p>내용</p> -->
-            <textarea style="width: 90%; margin: 10px;"><%= data.content %></textarea>
+            <textarea style="width: 90%; margin: 10px;" disabled><%= data.content %></textarea>
             <div style="justify-content: space-between;"></div>
             <a class="btn btn-primary" href="/update/<%= data.bbs_id %>">수정</a>
             <button class="btn btn-primary" onclick="del_bbs('<%= data.bbs_id %>');">삭제</button>
