--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,5 +5,5 @@
 <script src="/javascripts/script.js"></script>
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, inital-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta http-equiv="X-UA-Compatible" content="id=edge">
